k8s/apps/crosslink/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crosslink
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`crosslink.litarvan.com`)
      services:
        - name: crosslink
          port: http
