k8s/apps/crosslink/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crosslink
spec:
  rules:
    - host: crosslink.litarvan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crosslink
                port:
                  name: http
  tls:
    - hosts:
        - crosslink.litarvan.com
      secretName: crosslink-tls
